add css for blueprint

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,18 @@
 			integrity="sha256-T/zFmO5s/0aSwc6ics2KLxlfbewyRz6UNw1s3Ppf5gE="
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@blueprintjs/core@3.39.0/lib/css/blueprint.css"
+			integrity="sha256-BUyhQF1t9q9lKqBhmkiEjZ8iqHKtCqnjFjpY9xO82Vk="
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css"
+			integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
+			crossorigin="anonymous"
+		/>
 		<% preact.headEnd %>
 	</head>
 	<body>
